[tool.poetry]
name = "asteroid_hunter"
version = "0.1.0"
description = ""
authors = ["Logan Riffell <lkriffell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
DateTime = "^4.3"
python-dotenv = "^0.15.0"
vcrpy = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
